--- a/spec/fixtures/vcr_cassettes/chat_streaming_responses_openai_gpt-4_1-nano_reports_consistent_token_counts_compared_to_non-streaming.yml
+++ b/spec/fixtures/vcr_cassettes/chat_streaming_responses_openai_gpt-4_1-nano_reports_consistent_token_counts_compared_to_non-streaming.yml
@@ -9,7 +9,7 @@ http_interactions:
         from 1 to 3","status":"completed"}],"stream":true,"temperature":0.0}'
     headers:
       User-Agent:
-      - Faraday v2.12.2
+      - Faraday v2.13.4
       Authorization:
       - Bearer <OPENAI_API_KEY>
       Content-Type:
@@ -24,43 +24,25 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Wed, 20 Aug 2025 17:12:28 GMT
+      - Mon, 25 Aug 2025 05:06:53 GMT
       Content-Type:
       - text/event-stream; charset=utf-8
       Transfer-Encoding:
       - chunked
       Connection:
       - keep-alive
-      Access-Control-Expose-Headers:
-      - X-Request-ID
-      Openai-Organization:
-      - "<OPENAI_ORGANIZATION>"
-      Openai-Processing-Ms:
-      - '168'
-      Openai-Project:
-      - proj_KyS64Yhsc9qhhwjNcgkOa88E
       Openai-Version:
       - '2020-10-01'
-      X-Envoy-Upstream-Service-Time:
-      - '188'
-      X-Ratelimit-Limit-Requests:
-      - '500'
-      X-Ratelimit-Limit-Tokens:
-      - '200000'
-      X-Ratelimit-Remaining-Requests:
-      - '499'
-      X-Ratelimit-Remaining-Tokens:
-      - '199993'
-      X-Ratelimit-Reset-Requests:
-      - 120ms
-      X-Ratelimit-Reset-Tokens:
-      - 2ms
+      Openai-Organization:
+      - "<OPENAI_ORGANIZATION>"
+      Openai-Project:
+      - "<OPENAI_PROJECT>"
       X-Request-Id:
       - "<X_REQUEST_ID>"
       Openai-Processing-Ms:
-      - '35'
+      - '49'
       X-Envoy-Upstream-Service-Time:
-      - '39'
+      - '54'
       Strict-Transport-Security:
       - max-age=31536000; includeSubDomains; preload
       Cf-Cache-Status:
@@ -79,30 +61,52 @@ http_interactions:
     body:
       encoding: UTF-8
       string: |+
-        data: {"id":"chatcmpl-C6geJLtl2WtUkIOZzKf8ogWRbbjAh","object":"chat.completion.chunk","created":1755709947,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_c4c155951e","choices":[{"index":0,"delta":{"role":"assistant","content":"","refusal":null},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"U95CAOKx"}
+        event: response.created
+        data: {"type":"response.created","sequence_number":0,"response":{"id":"resp_68abef6d7b9c8192a96c9972b3a7a7af0227cb3dda34901c","object":"response","created_at":1756098413,"status":"in_progress","background":false,"error":null,"incomplete_details":null,"instructions":null,"max_output_tokens":null,"max_tool_calls":null,"model":"gpt-4.1-nano-2025-04-14","output":[],"parallel_tool_calls":true,"previous_response_id":null,"prompt_cache_key":null,"reasoning":{"effort":null,"summary":null},"safety_identifier":null,"service_tier":"auto","store":true,"temperature":0.0,"text":{"format":{"type":"text"},"verbosity":"medium"},"tool_choice":"auto","tools":[],"top_logprobs":0,"top_p":1.0,"truncation":"disabled","usage":null,"user":null,"metadata":{}}}
 
-        data: {"id":"chatcmpl-C6geJLtl2WtUkIOZzKf8ogWRbbjAh","object":"chat.completion.chunk","created":1755709947,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_c4c155951e","choices":[{"index":0,"delta":{"content":"1"},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"93KfU0D1k"}
+        event: response.in_progress
+        data: {"type":"response.in_progress","sequence_number":1,"response":{"id":"resp_68abef6d7b9c8192a96c9972b3a7a7af0227cb3dda34901c","object":"response","created_at":1756098413,"status":"in_progress","background":false,"error":null,"incomplete_details":null,"instructions":null,"max_output_tokens":null,"max_tool_calls":null,"model":"gpt-4.1-nano-2025-04-14","output":[],"parallel_tool_calls":true,"previous_response_id":null,"prompt_cache_key":null,"reasoning":{"effort":null,"summary":null},"safety_identifier":null,"service_tier":"auto","store":true,"temperature":0.0,"text":{"format":{"type":"text"},"verbosity":"medium"},"tool_choice":"auto","tools":[],"top_logprobs":0,"top_p":1.0,"truncation":"disabled","usage":null,"user":null,"metadata":{}}}
 
-        data: {"id":"chatcmpl-C6geJLtl2WtUkIOZzKf8ogWRbbjAh","object":"chat.completion.chunk","created":1755709947,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_c4c155951e","choices":[{"index":0,"delta":{"content":","},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"Dw1VLVN52"}
+        event: response.output_item.added
+        data: {"type":"response.output_item.added","sequence_number":2,"output_index":0,"item":{"id":"msg_68abef6dcba08192a848c941bb211a8b0227cb3dda34901c","type":"message","status":"in_progress","content":[],"role":"assistant"}}
 
-        data: {"id":"chatcmpl-C6geJLtl2WtUkIOZzKf8ogWRbbjAh","object":"chat.completion.chunk","created":1755709947,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_c4c155951e","choices":[{"index":0,"delta":{"content":" "},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"k7pBBE8QD"}
-
-        data: {"id":"chatcmpl-C6geJLtl2WtUkIOZzKf8ogWRbbjAh","object":"chat.completion.chunk","created":1755709947,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_c4c155951e","choices":[{"index":0,"delta":{"content":"2"},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"ndWXjOTbr"}
-
-        data: {"id":"chatcmpl-C6geJLtl2WtUkIOZzKf8ogWRbbjAh","object":"chat.completion.chunk","created":1755709947,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_c4c155951e","choices":[{"index":0,"delta":{"content":","},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"X56QmlKgq"}
-
-        data: {"id":"chatcmpl-C6geJLtl2WtUkIOZzKf8ogWRbbjAh","object":"chat.completion.chunk","created":1755709947,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_c4c155951e","choices":[{"index":0,"delta":{"content":" "},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"uUOfhBQZw"}
-
-        data: {"id":"chatcmpl-C6geJLtl2WtUkIOZzKf8ogWRbbjAh","object":"chat.completion.chunk","created":1755709947,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_c4c155951e","choices":[{"index":0,"delta":{"content":"3"},"logprobs":null,"finish_reason":null}],"usage":null,"obfuscation":"8DxNC84cP"}
-
-        data: {"id":"chatcmpl-C6geJLtl2WtUkIOZzKf8ogWRbbjAh","object":"chat.completion.chunk","created":1755709947,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_c4c155951e","choices":[{"index":0,"delta":{},"logprobs":null,"finish_reason":"stop"}],"usage":null,"obfuscation":"cUOp"}
-
-        data: {"id":"chatcmpl-C6geJLtl2WtUkIOZzKf8ogWRbbjAh","object":"chat.completion.chunk","created":1755709947,"model":"gpt-4.1-nano-2025-04-14","service_tier":"default","system_fingerprint":"fp_c4c155951e","choices":[],"usage":{"prompt_tokens":14,"completion_tokens":7,"total_tokens":21,"prompt_tokens_details":{"cached_tokens":0,"audio_tokens":0},"completion_tokens_details":{"reasoning_tokens":0,"audio_tokens":0,"accepted_prediction_tokens":0,"rejected_prediction_tokens":0}},"obfuscation":"lrLazH5zyO"}
+        event: response.content_part.added
+        data: {"type":"response.content_part.added","sequence_number":3,"item_id":"msg_68abef6dcba08192a848c941bb211a8b0227cb3dda34901c","output_index":0,"content_index":0,"part":{"type":"output_text","annotations":[],"logprobs":[],"text":""}}
 
         event: response.output_text.delta
-        data: {"type":"response.output_text.delta","sequence_number":10,"item_id":"msg_6892d9cc2bcc819dafc6201af760aa32023dfe47d80ad8b5","output_index":0,"content_index":0,"delta":"3","logprobs":[],"obfuscation":"gGnFJAikl41wyOZ"}
+        data: {"type":"response.output_text.delta","sequence_number":4,"item_id":"msg_68abef6dcba08192a848c941bb211a8b0227cb3dda34901c","output_index":0,"content_index":0,"delta":"1","logprobs":[],"obfuscation":"l5QF6yE0sL6GxSK"}
 
-  recorded_at: Wed, 20 Aug 2025 17:12:28 GMT
+        event: response.output_text.delta
+        data: {"type":"response.output_text.delta","sequence_number":5,"item_id":"msg_68abef6dcba08192a848c941bb211a8b0227cb3dda34901c","output_index":0,"content_index":0,"delta":",","logprobs":[],"obfuscation":"401txdgViOVl59j"}
+
+        event: response.output_text.delta
+        data: {"type":"response.output_text.delta","sequence_number":6,"item_id":"msg_68abef6dcba08192a848c941bb211a8b0227cb3dda34901c","output_index":0,"content_index":0,"delta":" ","logprobs":[],"obfuscation":"WRSJjb6qFvglJAd"}
+
+        event: response.output_text.delta
+        data: {"type":"response.output_text.delta","sequence_number":7,"item_id":"msg_68abef6dcba08192a848c941bb211a8b0227cb3dda34901c","output_index":0,"content_index":0,"delta":"2","logprobs":[],"obfuscation":"WZKHZerzKLzafyk"}
+
+        event: response.output_text.delta
+        data: {"type":"response.output_text.delta","sequence_number":8,"item_id":"msg_68abef6dcba08192a848c941bb211a8b0227cb3dda34901c","output_index":0,"content_index":0,"delta":",","logprobs":[],"obfuscation":"RMBQ2onfRo7dxUg"}
+
+        event: response.output_text.delta
+        data: {"type":"response.output_text.delta","sequence_number":9,"item_id":"msg_68abef6dcba08192a848c941bb211a8b0227cb3dda34901c","output_index":0,"content_index":0,"delta":" ","logprobs":[],"obfuscation":"Z7QSFN7FMJedP9D"}
+
+        event: response.output_text.delta
+        data: {"type":"response.output_text.delta","sequence_number":10,"item_id":"msg_68abef6dcba08192a848c941bb211a8b0227cb3dda34901c","output_index":0,"content_index":0,"delta":"3","logprobs":[],"obfuscation":"iDi5ypLkUdBQheq"}
+
+        event: response.output_text.done
+        data: {"type":"response.output_text.done","sequence_number":11,"item_id":"msg_68abef6dcba08192a848c941bb211a8b0227cb3dda34901c","output_index":0,"content_index":0,"text":"1, 2, 3","logprobs":[]}
+
+        event: response.content_part.done
+        data: {"type":"response.content_part.done","sequence_number":12,"item_id":"msg_68abef6dcba08192a848c941bb211a8b0227cb3dda34901c","output_index":0,"content_index":0,"part":{"type":"output_text","annotations":[],"logprobs":[],"text":"1, 2, 3"}}
+
+        event: response.output_item.done
+        data: {"type":"response.output_item.done","sequence_number":13,"output_index":0,"item":{"id":"msg_68abef6dcba08192a848c941bb211a8b0227cb3dda34901c","type":"message","status":"completed","content":[{"type":"output_text","annotations":[],"logprobs":[],"text":"1, 2, 3"}],"role":"assistant"}}
+
+        event: response.completed
+        data: {"type":"response.completed","sequence_number":14,"response":{"id":"resp_68abef6d7b9c8192a96c9972b3a7a7af0227cb3dda34901c","object":"response","created_at":1756098413,"status":"completed","background":false,"error":null,"incomplete_details":null,"instructions":null,"max_output_tokens":null,"max_tool_calls":null,"model":"gpt-4.1-nano-2025-04-14","output":[{"id":"msg_68abef6dcba08192a848c941bb211a8b0227cb3dda34901c","type":"message","status":"completed","content":[{"type":"output_text","annotations":[],"logprobs":[],"text":"1, 2, 3"}],"role":"assistant"}],"parallel_tool_calls":true,"previous_response_id":null,"prompt_cache_key":null,"reasoning":{"effort":null,"summary":null},"safety_identifier":null,"service_tier":"default","store":true,"temperature":0.0,"text":{"format":{"type":"text"},"verbosity":"medium"},"tool_choice":"auto","tools":[],"top_logprobs":0,"top_p":1.0,"truncation":"disabled","usage":{"input_tokens":14,"input_tokens_details":{"cached_tokens":0},"output_tokens":8,"output_tokens_details":{"reasoning_tokens":0},"total_tokens":22},"user":null,"metadata":{}}}
+
+  recorded_at: Mon, 25 Aug 2025 05:06:53 GMT
 - request:
     method: post
     uri: https://api.openai.com/v1/responses
@@ -112,7 +116,7 @@ http_interactions:
         from 1 to 3","status":"completed"}],"stream":false,"temperature":0.0}'
     headers:
       User-Agent:
-      - Faraday v2.12.2
+      - Faraday v2.13.4
       Authorization:
       - Bearer <OPENAI_API_KEY>
       Content-Type:
@@ -127,43 +131,37 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Wed, 20 Aug 2025 17:12:28 GMT
+      - Mon, 25 Aug 2025 05:06:54 GMT
       Content-Type:
       - application/json
       Transfer-Encoding:
       - chunked
       Connection:
       - keep-alive
-      Access-Control-Expose-Headers:
-      - X-Request-ID
-      Openai-Organization:
-      - "<OPENAI_ORGANIZATION>"
-      Openai-Processing-Ms:
-      - '304'
-      Openai-Project:
-      - proj_KyS64Yhsc9qhhwjNcgkOa88E
+      X-Ratelimit-Limit-Requests:
+      - '30000'
+      X-Ratelimit-Limit-Tokens:
+      - '150000000'
+      X-Ratelimit-Remaining-Requests:
+      - '29999'
+      X-Ratelimit-Remaining-Tokens:
+      - '149999967'
+      X-Ratelimit-Reset-Requests:
+      - 2ms
+      X-Ratelimit-Reset-Tokens:
+      - 0s
       Openai-Version:
       - '2020-10-01'
-      X-Envoy-Upstream-Service-Time:
-      - '329'
-      X-Ratelimit-Limit-Requests:
-      - '500'
-      X-Ratelimit-Limit-Tokens:
-      - '200000'
-      X-Ratelimit-Remaining-Requests:
-      - '499'
-      X-Ratelimit-Remaining-Tokens:
-      - '199993'
-      X-Ratelimit-Reset-Requests:
-      - 120ms
-      X-Ratelimit-Reset-Tokens:
-      - 2ms
+      Openai-Organization:
+      - "<OPENAI_ORGANIZATION>"
+      Openai-Project:
+      - "<OPENAI_PROJECT>"
       X-Request-Id:
       - "<X_REQUEST_ID>"
       Openai-Processing-Ms:
-      - '465'
+      - '421'
       X-Envoy-Upstream-Service-Time:
-      - '478'
+      - '424'
       Strict-Transport-Security:
       - max-age=31536000; includeSubDomains; preload
       Cf-Cache-Status:
@@ -183,13 +181,20 @@ http_interactions:
       encoding: ASCII-8BIT
       string: |-
         {
-          "id": "chatcmpl-C6geKz2354N1FaQgqTA5MXGl7TpPC",
-          "object": "chat.completion",
-          "created": 1755709948,
+          "id": "resp_68abef6e51d481a2a4954238b1f61829094625f18cdea301",
+          "object": "response",
+          "created_at": 1756098414,
+          "status": "completed",
+          "background": false,
+          "error": null,
+          "incomplete_details": null,
+          "instructions": null,
+          "max_output_tokens": null,
+          "max_tool_calls": null,
           "model": "gpt-4.1-nano-2025-04-14",
           "output": [
             {
-              "id": "msg_6892d9ccdbb081a299423e1d8c20de9b0cc127714d6b9c67",
+              "id": "msg_68abef6e951c81a2bb5723793251df3d094625f18cdea301",
               "type": "message",
               "status": "completed",
               "content": [
@@ -217,10 +222,27 @@ http_interactions:
           "text": {
             "format": {
               "type": "text"
-            }
+            },
+            "verbosity": "medium"
           },
-          "service_tier": "default",
-          "system_fingerprint": "fp_c4c155951e"
+          "tool_choice": "auto",
+          "tools": [],
+          "top_logprobs": 0,
+          "top_p": 1.0,
+          "truncation": "disabled",
+          "usage": {
+            "input_tokens": 14,
+            "input_tokens_details": {
+              "cached_tokens": 0
+            },
+            "output_tokens": 8,
+            "output_tokens_details": {
+              "reasoning_tokens": 0
+            },
+            "total_tokens": 22
+          },
+          "user": null,
+          "metadata": {}
         }
-  recorded_at: Wed, 20 Aug 2025 17:12:28 GMT
+  recorded_at: Mon, 25 Aug 2025 05:06:54 GMT
 recorded_with: VCR 6.3.1
